--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "chart.js": "^2.9.3",
+        "vue-chartjs": "^3.5.0",
+        "vue-snotify": "^3.2.1",
+        "vuelidate": "^0.7.5"
     }
 }
